# ansible-local

./: .gitignore  CLAUDE.md  README.md
.ansible/: install.sh  inventory  pyproject.toml  requirements.txt  site.yml
.ansible/roles/claudecode/defaults/: main.yml
.ansible/roles/claudecode/files/: AGENTS.md  CLAUDE.local.md  CLAUDE.md  mcpServers.json  plan.md  sequential-thinking.md  statusline.sh  team.md
.ansible/roles/claudecode/tasks/: main.yml
.ansible/roles/claudecode/templates/: custom_lsp_marketplace.json.j2  devcontainer.json.j2  lsp_plugin_lsp.json.j2  lsp_plugin_manifest.json.j2  mcpServers.json.j2  settings.json.j2
.ansible/roles/cmux/tasks/: main.yml
.ansible/roles/codex/defaults/: main.yml
.ansible/roles/codex/files/: AGENTS.md
.ansible/roles/codex/tasks/: main.yml
.ansible/roles/codex/templates/: config.toml.j2
.ansible/roles/common/defaults/: main.yml
.ansible/roles/common/files/: .agignore  .bash_aliases  .bash_profile  .bashrc  .gitignore  .inputrc  docker_config.json  ghostty_config
.ansible/roles/common/tasks/: main.yml
.ansible/roles/common/templates/: .gitconfig.j2  wsl.conf.j2
.ansible/roles/docker/tasks/: main.yml
.ansible/roles/goenv/defaults/: main.yml
.ansible/roles/goenv/tasks/: main.yml
.ansible/roles/mise/defaults/: main.yml
.ansible/roles/mise/tasks/: main.yml
.ansible/roles/mise/templates/: config.toml.j2
.ansible/roles/neovim/defaults/: main.yml
.ansible/roles/neovim/files/: .globalrc  CLAUDE.md  config.yml  init.vim  lazygit_config.yml  mcpServers.json  serena_config.yml  settings.json
(+58 files in other folders)
