[project]
name = "ansible-local"
version = "0.1.0"
description = "Ansible configuration for local development environment"
requires-python = ">=3.11"
dependencies = [
    "ansible>=11.9.0",
    "neovim>=0.3.1",
    "pynvim>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# パッケージング不要（依存関係管理のみ）
[tool.hatch.build.targets.wheel]
packages = []
